# embedding-service

./: .dockerignore  Dockerfile  README.md  cloudrun-svc.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: docker-hub.yaml
.run/: API bm42.run.xml  API e5.run.xml  API jina.run.xml  API.run.xml  docker-compose.run.xml
app/: __init__.py  api.py  config.py  download_model.py  logger.py  logging.py  main.py  models.py  types.py  utils.py
app/e5_large_v2/: __init__.py  embedding.py  models.py  router.py
app/embedders/: __init__.py  base_dense_embedder.py  base_embedder.py  base_transformer_embedder.py  bm42_embedder.py  e5_embedder.py  e5_large_v2_embedder.py  jina_embedder.py  jina_embeddings_v3_embedder.py  utils.py
app/embedding/: __init__.py  base_embedder.py  base_transformer_dense_embbeder.py  base_transformer_embbeder.py  base_transformer_sparse_embbeder.py  bge_m3_embedder.py  bm25_embedder.py  bm42.py  gemini_2_flash_embedder.py  multilingual_e5_large_embedder.py  splade_cocondenser_embedder.py  st_mpnet_v2_embedder.py
app/jina_embeddings_v3/: __init__.py  embedding.py  models.py  router.py
tests/: __init__.py  test_api.py
