[project]
name = "embedding-service"
version = "v0.1.0"
description = "API for generating sparse and dense embeddings from text"
authors = [
    { name = "Joan Fabrégat", email = "jfabregat@fogandfrog.com" }
]
requires-python = ">=3.13"
dependencies = [
    "transformers",
    "torch",
    "numpy",
    "fastapi",
    "pydantic",
    "fastembed>=0.6.0",
]

[dependency-groups]
dev = [
    "einops>=0.8.1",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
]
prod = [
    "uvicorn>=0.34.0",
]
