# Copyright (c) 2025 Joan Fabrégat <j@fabreg.at>
# Permission is hereby granted, free of charge, to any person
# obtaining a copy of this software and associated documentation
# files (the "Software"), to deal in the Software without
# restriction, subject to the conditions in the full MIT License.
# The Software is provided "as is", without warranty of any kind.
[project]
name = "embedding-service"
version = "v0.1.0"
description = "API for generating sparse and dense embeddings from text"
authors = [
    { name = "Joan Fabrégat", email = "jfabregat@fogandfrog.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "fastapi",
    "pydantic",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest",
]
jina = [
    "transformers",
    "torch",
]
e5 = [
    "transformers",
    "torch",
]
bm42 = [
    "fastembed",
]
